# PDF-converter

./: .gitignore  PDFConverter.spec  README.md  pyproject.toml
docs/: requirements-ko.md
src/pdf_converter/: main.py
src/pdf_converter/converters/: __init__.py  base.py  common.py  excel.py  hwp.py  powerpoint.py  registry.py  word.py
src/pdf_converter/core/: constants.py  models.py
src/pdf_converter/gui/: main_window.py  result_dialog.py
src/pdf_converter/services/: conversion_worker.py  excel_validation.py  file_scanner.py  logging_service.py  pdf_validation.py  printer_service.py  settings.py
tests/: test_conversion_worker_validation.py  test_converter_common.py  test_converter_registry.py  test_excel_validation.py  test_file_scanner.py  test_pdf_validation.py  test_printer_settings.py  test_result_dialog.py  test_table_editing.py
