[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-converter"
version = "0.1.0"
description = "Windows batch PDF converter for HWP, Excel, Word, and PowerPoint"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7,<7",
  "pywin32>=306; platform_system == 'Windows'",
  "pypdf>=5,<6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "pyinstaller>=6"]

[project.scripts]
pdf-converter = "pdf_converter.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
